2012-02-04  Kaz Kylheku  <kaz@kylheku.com>

	* utf8.c (utf8_from_uc): Bugfix: incorrect condition in character
	range check (less than minimum *and* U+DCxx, rather than *or*).
	Also, we must check for out of range characters. UTF-8 sequences
	beginning with F4 can code beyond 0x10FFFF.
	(utf8_decode): Check for characters beyond 0x10FFFF.

2012-02-03  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (rest_s, op_s): New variables.
	(do_eval_args): Allow calls specified by improper lists
	like (x y . z) where the z expression must evaluate to a list 
	that turns into addition arguments to be applied.
	(transform_op, expand_op): New static functions.
	(expand): Call expand_op.
	(eval_init): Initialize rest_s and op_s. Use rest_s
	to register rest function.

	* lib.c (gensym): New function based on gensymv.
	(gensymv): Now calls gensym.

	* lib.h (gensym): Declared.

	* parser.l: Parse @ followed by digits as a new kind of token,
	METANUM.

	* parser.y (METANUM): New token.
	(meta_expr, exprs): Missing rlcp's added.
	(expr): METANUM variant introduced.
	(yybadtoken): Handle METANUM.

	* txr.1: Documented one-symbol argument list of lambda.
	Documented op. Closed some unbalanced parentheses.

	* txr.vim: Highlight op.

2012-02-02  Kaz Kylheku  <kaz@kylheku.com>

	* utf8.c (utf8_from_uc, utf8_decode): Use upper case for hex constants.
	If bytes decode to U+DCxx, treat this sequence as invalid. This
	way we can't be fooled by an attacker into accepting some U+DCxx which
	on output we will then convert to byte xx.
	(utf8_to_uc): Use upper case for hex constants.

2012-02-02  Kaz Kylheku  <kaz@kylheku.com>

	* utf8.c (utf8_to_uc, utf8_encode): Do not encode surrogate code
	points (U+DC00 to U+DCFF) as multi-byte UTF8 sequences.  We use
	that range for invalid bytes on input, so on output the best thing
	to do is to reproduce the original bytes. E.g the code U+DCA0
	will produce the byte A0.

2012-02-02  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: UTF-8 handling clarified.
