@@ -1,3 +1,11 @@
+2012-02-05  Kaz Kylheku  <kaz@kylheku.com>
+
+	* utf8.c (utf8_from_uc, utf8_decode): Some cascaded if tests converted
+	to a switch on the upper nybble value. This also fixes an unfortunate
+	bug. The test for the two byte case was written as 
+	ch >= 0xc2 && ch <= 0xE0. That should have been ch < 0xE0.
+	Versions of TXR up to 55 have been incorrectly decoding some UTF-8.
+
 2012-02-04  Kaz Kylheku  <kaz@kylheku.com>
 
 	* utf8.c (utf8_from_uc): Bugfix: incorrect condition in character
